--- a/R/basic_R(variable, vector...etc).ipynb
+++ b/R/basic_R(variable, vector...etc).ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -857,8 +857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "subjects <- c('Math', 'Korean', 'Science', 'Society', 'History')\n",
@@ -867,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -917,6 +919,905 @@
     "names(score_2) <- subjects\n",
     "score_2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>4</li>\n",
+       "\t<li>3.95</li>\n",
+       "\t<li>4.13</li>\n",
+       "\t<li>4.4</li>\n",
+       "\t<li>3.7</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 4\n",
+       "\\item 3.95\n",
+       "\\item 4.13\n",
+       "\\item 4.4\n",
+       "\\item 3.7\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 4\n",
+       "2. 3.95\n",
+       "3. 4.13\n",
+       "4. 4.4\n",
+       "5. 3.7\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 4.00 3.95 4.13 4.40 3.70"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3 <- c(4.0, 3.95, 4.13, 4.4, 3.7)\n",
+    "score_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4"
+      ],
+      "text/latex": [
+       "4"
+      ],
+      "text/markdown": [
+       "4"
+      ],
+      "text/plain": [
+       "[1] 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4.13"
+      ],
+      "text/latex": [
+       "4.13"
+      ],
+      "text/markdown": [
+       "4.13"
+      ],
+      "text/plain": [
+       "[1] 4.13"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.7"
+      ],
+      "text/latex": [
+       "3.7"
+      ],
+      "text/markdown": [
+       "3.7"
+      ],
+      "text/plain": [
+       "[1] 3.7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;NA&gt;"
+      ],
+      "text/latex": [
+       "<NA>"
+      ],
+      "text/markdown": [
+       "&lt;NA&gt;"
+      ],
+      "text/plain": [
+       "[1] NA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>4</li>\n",
+       "\t<li>3.95</li>\n",
+       "\t<li>4.13</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 4\n",
+       "\\item 3.95\n",
+       "\\item 4.13\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 4\n",
+       "2. 3.95\n",
+       "3. 4.13\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 4.00 3.95 4.13"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_3[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>Math:</strong> 70"
+      ],
+      "text/latex": [
+       "\\textbf{Math:} 70"
+      ],
+      "text/markdown": [
+       "**Math:** 70"
+      ],
+      "text/plain": [
+       "Math \n",
+       "  70 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_2[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl class=dl-horizontal>\n",
+       "\t<dt>Society</dt>\n",
+       "\t\t<dd>80</dd>\n",
+       "\t<dt>History</dt>\n",
+       "\t\t<dd>84</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[Society] 80\n",
+       "\\item[History] 84\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "Society\n",
+       ":   80History\n",
+       ":   84\n",
+       "\n"
+      ],
+      "text/plain": [
+       "Society History \n",
+       "     80      84 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "score_2[4:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>7</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 3\n",
+       "3. 5\n",
+       "4. 7\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 3 5 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- c(1,3,5,7)\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 3\n",
+       "3. 5\n",
+       "4. 7\n",
+       "5. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 3 5 7 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- c(vc_7, 9)\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>-1</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item -1\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. -1\n",
+       "2. 1\n",
+       "3. 3\n",
+       "4. 5\n",
+       "5. 7\n",
+       "6. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] -1  1  3  5  7  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- c(-1, vc_7)\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>-1</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item -1\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. -1\n",
+       "2. 0\n",
+       "3. 1\n",
+       "4. 3\n",
+       "5. 5\n",
+       "6. 7\n",
+       "7. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] -1  0  1  3  5  7  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- append(vc_7, 0, after = 1)\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>-1</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item -1\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 6\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. -1\n",
+       "2. 0\n",
+       "3. 1\n",
+       "4. 3\n",
+       "5. 5\n",
+       "6. 6\n",
+       "7. 7\n",
+       "8. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] -1  0  1  3  5  6  7  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- append(vc_7, 6, after = 5)\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>-3</li>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item -3\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 6\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. -3\n",
+       "2. 0\n",
+       "3. 1\n",
+       "4. 3\n",
+       "5. 5\n",
+       "6. 6\n",
+       "7. 7\n",
+       "8. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] -3  0  1  3  5  6  7  9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7[1] <- -3\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 6\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0\n",
+       "2. 1\n",
+       "3. 3\n",
+       "4. 5\n",
+       "5. 6\n",
+       "6. 7\n",
+       "7. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0 1 3 5 6 7 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- vc_7[-1]\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>8</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 8\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0\n",
+       "2. 1\n",
+       "3. 3\n",
+       "4. 5\n",
+       "5. 8\n",
+       "6. 7\n",
+       "7. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0 1 3 5 8 7 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7[5] <- 8\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>0</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>7</li>\n",
+       "\t<li>9</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 5\n",
+       "\\item 7\n",
+       "\\item 9\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0\n",
+       "2. 1\n",
+       "3. 3\n",
+       "4. 5\n",
+       "5. 7\n",
+       "6. 9\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0 1 3 5 7 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_7 <- vc_7[-5]\n",
+    "vc_7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>1</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>8</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>1</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>1</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\item 1\n",
+       "\\item 5\n",
+       "\\item 4\n",
+       "\\item 3\n",
+       "\\item 1\n",
+       "\\item 8\n",
+       "\\item 6\n",
+       "\\item 2\n",
+       "\\item 1\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\item 1\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 2\n",
+       "3. 3\n",
+       "4. 4\n",
+       "5. 1\n",
+       "6. 5\n",
+       "7. 4\n",
+       "8. 3\n",
+       "9. 1\n",
+       "10. 8\n",
+       "11. 6\n",
+       "12. 2\n",
+       "13. 1\n",
+       "14. 3\n",
+       "15. 4\n",
+       "16. 1\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] 1 2 3 4 1 5 4 3 1 8 6 2 1 3 4 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_8 <- c(1,2,3,4,1,5,4,3,1,8,6,2,1,3,4,1)\n",
+    "vc_8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>10</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>10</li>\n",
+       "\t<li>5</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>10</li>\n",
+       "\t<li>8</li>\n",
+       "\t<li>6</li>\n",
+       "\t<li>2</li>\n",
+       "\t<li>10</li>\n",
+       "\t<li>3</li>\n",
+       "\t<li>4</li>\n",
+       "\t<li>10</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 10\n",
+       "\\item 2\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\item 10\n",
+       "\\item 5\n",
+       "\\item 4\n",
+       "\\item 3\n",
+       "\\item 10\n",
+       "\\item 8\n",
+       "\\item 6\n",
+       "\\item 2\n",
+       "\\item 10\n",
+       "\\item 3\n",
+       "\\item 4\n",
+       "\\item 10\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 10\n",
+       "2. 2\n",
+       "3. 3\n",
+       "4. 4\n",
+       "5. 10\n",
+       "6. 5\n",
+       "7. 4\n",
+       "8. 3\n",
+       "9. 10\n",
+       "10. 8\n",
+       "11. 6\n",
+       "12. 2\n",
+       "13. 10\n",
+       "14. 3\n",
+       "15. 4\n",
+       "16. 10\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] 10  2  3  4 10  5  4  3 10  8  6  2 10  3  4 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vc_8[vc_8 == 1 ] <- 10\n",
+    "vc_8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
