--- a/Python/basic_python_7.ipynb
+++ b/Python/basic_python_7.ipynb
@@ -457,7 +457,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sum_minus(calculation, *vals):\n",
@@ -611,6 +613,191 @@
    "source": [
     "fun3(10, 20, 30, name = 'python', version = 3.6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def student(name, number, man = True):\n",
+    "    print(\"학생의 이름은 %s 입니다.\" % name)\n",
+    "    print(\"번호는 %s번 입니다.\" % number)\n",
+    "    if man:\n",
+    "        print(\"남학생입니다.\")\n",
+    "    else:\n",
+    "        print(\"여학생입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학생의 이름은 kane 입니다.\n",
+      "번호는 13번 입니다.\n",
+      "남학생입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "student(\"kane\", 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학생의 이름은 alice 입니다.\n",
+      "번호는 5번 입니다.\n",
+      "여학생입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "student(\"alice\", 5, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학생의 이름은 Mike 입니다.\n",
+      "번호는 9번 입니다.\n",
+      "남학생입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "student(\"Mike\", 9, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 5\n",
+    "def cal(k):\n",
+    "    k = k + 3\n",
+    "    \n",
+    "cal(k)\n",
+    "print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jh = 3\n",
+    "\n",
+    "def cul(jh):\n",
+    "    jh = jh + 1\n",
+    "    \n",
+    "cul(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(jh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 3\n",
+    "def tet(w):\n",
+    "    w = w * 2\n",
+    "    return w\n",
+    "\n",
+    "print(w)\n",
+    "w = tet(w)\n",
+    "print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = 3\n",
+    "def tat(w):\n",
+    "    global q\n",
+    "    q = q * 2\n",
+    "\n",
+    "\n",
+    "tat(q)\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
