lambda map filter

--- a/Python/basic_python_8.ipynb
+++ b/Python/basic_python_8.ipynb
@@ -335,6 +335,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,6 +390,28 @@
     "p_2 = [10, 20, 30, 40, 50]\n",
     "\n",
     "list(map(plus2, p_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 2, 8, 0]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = [3, 4, 5, 1, 2, 7, 8, 9, 0]\n",
+    "\n",
+    "list(filter(lambda x : x % 2 == 0, k))"
    ]
   }
  ],
