--- a/Python/day3.ipynb
+++ b/Python/day3.ipynb
@@ -1,6 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10, 0, -1):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -717,10 +771,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my car is 아우디 4인승 세단이다.\n",
+      "my car is 벤츠 2인승 세단이다.\n",
+      "my car is 머큐리 4인승 머슬카이다.\n",
+      "my car is 폭스바겐 6인승 집차이다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intro_car(brand, seats = 4, type = '세단'):\n",
+    "    print('my car is {b} {s}인승 {t}이다.'.format(\n",
+    "           b= brand,\n",
+    "           s= seats,\n",
+    "           t= type\n",
+    "    ) )\n",
+    "    \n",
+    "intro_car('아우디')\n",
+    "intro_car('벤츠', seats = 2)\n",
+    "intro_car(brand = '머큐리', type = '머슬카')\n",
+    "intro_car('폭스바겐', 6, '집차')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "저는 철수입니다.\n",
+      "==================================================\n",
+      "* 철수  * 철수  * 철수  \n",
+      "==================================================\n",
+      "-- 고향 : 서울 \n",
+      "-- 주거형태 : 아파트 \n",
+      "-- 평균나이 : 35 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def intro_fam(name, *fname, **finfo):  # * : 다중변수   ** : 딕셔너리 형태\n",
+    "    print('저는 %s입니다.' %  name)\n",
+    "    print('='*50)\n",
+    "    for na in fname:\n",
+    "        print('* %s ' % (name), end = \" \")\n",
+    "    else:\n",
+    "        print()\n",
+    "    print('='*50)\n",
+    "    \n",
+    "    for inf in finfo.keys():\n",
+    "        print('-- %s : %s ' % (inf, finfo[inf]))\n",
+    "        \n",
+    "intro_fam('철수', '영수', '병수', '관수', 고향 = '서울', 주거형태 = '아파트', 평균나이 = 35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "data = (15, 20)\n",
+    "\n",
+    "print(add(*data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "종수님, 방가방가, 반가워!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intro(name, greet, happy):\n",
+    "    return \"{name}님, {greet}, {happy}!\".format(\n",
+    "             name = name,\n",
+    "             greet = greet,\n",
+    "             happy = happy\n",
+    "              )\n",
+    "\n",
+    "intro_dic = {'name' : '종수', 'greet' : '방가방가', 'happy' : '반가워' }\n",
+    "print(intro(**intro_dic))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    아무것도 하지 않고 지금 이\n",
+      "         주석만 호출합니다.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def m_doc():\n",
+    "    \"\"\"\n",
+    "    아무것도 하지 않고 지금 이\n",
+    "         주석만 호출합니다.\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "print(m_doc.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    동아리를 소개하는 함수\n",
+      "    Args:\n",
+      "         name     : 동아리 이름을 입력합니다.\n",
+      "         *members : 동아리 맴버 이름을 입력합니다.\n",
+      "         **club_info : 동아리 정보를 입력합니다.\n",
+      "         \n",
+      "    return 값은 없습니다.\n",
+      "    \n",
+      "    \n",
+      "    수고하세요 ^^\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def intro_func(name, *members, **club_info):\n",
+    "    '''\n",
+    "    동아리를 소개하는 함수\n",
+    "    Args:\n",
+    "         name     : 동아리 이름을 입력합니다.\n",
+    "         *members : 동아리 맴버 이름을 입력합니다.\n",
+    "         **club_info : 동아리 정보를 입력합니다.\n",
+    "         \n",
+    "    return 값은 없습니다.\n",
+    "    \n",
+    "    \n",
+    "    수고하세요 ^^\n",
+    "    '''\n",
+    "    pass\n",
+    "\n",
+    "print(intro_func.__doc__)"
+   ]
   }
  ],
  "metadata": {
